overflow fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,25 +1,19 @@
-@import url('https://use.typekit.net/ull5rdh.css');
+@import url("https://use.typekit.net/evh4zqj.css");
 
 
 :root {
-  --adobeWhite: #f2f2f2;
-  --adobeBlack: #737373;
-  --adobeLightBlue: #B3C3F2;
-  --adobeBlue: #6078BF;
-  --adobeDarkBlue: #5872A6;
-
   --clear: rgba(0, 0, 0, 0);
   --darkGrey: #9d9692;
   --mainBlack: #4e4e4e;
   --blackText: #3c3c3c;
   --mainMcc: #dcdcdc;
-  --offWhite: var(--adobeWhite);/*#e9e9e9;*/
+  --offWhite: #f2f2f2; /*#e9e9e9;*/
   --mainWhite: #fffffe;
   --mainSpacing: 0.0625em;
-  --poppy: var(--adobeDarkBlue);  /*#5367a1;/*#1b55a1;*/
-  --poppyLow: var(--adobeDarkBlue); /*#4d5580;*/
-  --poppyHigh: var(--adobeLightBlue); /*hsl(214 52% 36% / 1);*/
-  --poppyDark: var(--adobeDarkBlue); /* hsl(214 71% 37% / 1);*/
+  --poppy: #5872A6;  /*#5367a1;/*#1b55a1;*/
+  --poppyLow: var(--poppy); /*#4d5580;*/
+  --poppyHigh: hsl(214 52% 36% / 1);
+  --poppyDark: var(--poppy); /* hsl(214 71% 37% / 1);*/
   --mainFont: Montserrat,sans-serif;
   --bodyLineHeight: 1.8em;
   --headingLineHeight: 1.4em;
@@ -29,8 +23,6 @@
   --dark-shadow: 0 0 4px rgb(0 0 0 / 15%);
   --mainRadius: 1.75rem;
   --errRed: #c74236;
-  --hiBlue: rgb(34 180 229);
-  --hiYellow: rgb(253 192 24);
 }
 *,
 ::after,
@@ -54,6 +46,7 @@ body {
   line-height: var(--bodyLineHeight);
   margin: 0;
   min-height: 100vh;
+  overflow: scroll;
   text-decoration: none;
   text-transform: none;
 }
@@ -97,12 +90,13 @@ h1 {
   letter-spacing: normal;
   font-size: 2.6876em;
   margin: 0.5em auto 0.3em;
-  margin-top: 0;
+  margin-block-start: 0;
   text-align: center;
 }
 h2,
 h3 {
   color: var(--mainBlack);
+  line-height: 1.3em;
   font-size: 2em;
 }
 hr {
@@ -142,13 +136,12 @@ nav {
   color: var(--mainBlack);
   font-size: 1rem;
   letter-spacing: var(--mainSpacing);
-  margin: 1.25rem auto 1rem;
-  /*padding-block-end: 1.25rem;*/
+  margin: 1.25rem auto .5rem;
 }
 nav * {
   color: var(--mainBlack);
   font-size: 1rem;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.03rem;
   text-transform: uppercase;
   white-space: nowrap;
 }
@@ -213,7 +206,6 @@ div#content {
   outline: none;
   padding: 0.1em 3.2em;
   white-space: pre-line;
-  height: fit-content;
 }
 
 button {
@@ -300,17 +292,18 @@ Utility classes
 }
 @media screen and (min-width: 481px) and (max-width: 719px) {
   div#content {
-    border-radius:1.5625em;
-    padding: 0.1rem 2.2em;
-    padding-block: 0.1em;
-    padding-inline: 2.2em;
+    border-radius:1.5625rem;
+    padding: 0.1rem 2.2rem;
+    padding-block: 0.1rem;
+    padding-inline: 2.2rem;
   }
 }
 @media screen and (min-width: 720px) and (max-width: 1239px) {
   div#content {
-    border-radius: 1.5625em;
-    padding-block: 0.1em;
-    padding-inline: 2.5em;
+    border-radius: 1.5625rem;
+    padding: 0.1rem 2.5rem;
+    padding-block: 0.1rem;
+    padding-inline: 2.5rem;
   }
 }
 @media screen and (min-width: 1240px) {
@@ -320,7 +313,6 @@ Utility classes
   }
 }
 .sr-only {
-  border: 0;
   position: absolute;
   left: -10000px;
   width: 1px;
@@ -328,6 +320,7 @@ Utility classes
   top: auto;
   overflow: hidden;
 }
+
 p.pb0 {
   padding-bottom: 0px;
 }
